fix: note MCP tools write the language they were asked for EXO-90294 (#1776)
Adding a multilingual version of a note through EVA or the MCP client
wrote the request into the **main** version instead of the translation.
News half: Meeds-io/content#930 (same task).

## Root cause
The private read behind every note tool resolved a blank language to the
caller's **profile locale**, and `NoteServiceImpl#getNoteByIdAndLang`
overlays that language's published version onto the returned page. For a
user whose locale had a translation, every write therefore started from
a translation — a default update pushed the translation's text onto the
main note, and a translation update clobbered the main note first.

The language is now always explicit: blank means the note's own default
version, on reads and writes alike, normalised once so `fr`, ` fr ` and
`FR` name one translation. The translation branch persists the default
page first (what `NotesRestService#updateNoteById` does), then builds
the version on that language's own state — title and content included,
so the calls a translation takes compose instead of reverting each
other.

## Two destructive defects found in review, older than this change
Both in the tools this task names, both invisible to every existing
test:
- **Setting** a translation's cover reused the default's file id, so
`saveNoteFeaturedImage` took `fileService.updateFile` and replaced the
binary on the default's own row — setting a French cover changed the
English one.
- **Removing** it deleted that file outright
(`removeNoteFeaturedImage`'s deletion is unguarded for `isDraft=false`)
and cleaned only `<pageId>-<lang>`, leaving the default note with no
image and a dangling id.

The verdict is now about the **file**, not about whether a version
exists for the language, and it fails **closed**: if the default's
metadata cannot be read, the cover is treated as shared and is neither
replaced nor deleted.

## ⚠️ Upgrade note — not just a testing note

`McpServerToo